show start and finish iterations

--- a/src/extension/package.json
+++ b/src/extension/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "azure-devops-extension-api": "^4.234.0",
     "azure-devops-extension-sdk": "^4.0.2",
-    "azure-devops-ui": "^2.266.0"
+    "azure-devops-ui": "^2.266.0",
+    "luxon": "^3.7.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/luxon": "^3.7.1",
     "@types/node": "^24.10.1",
     "@types/react": "^16.8.1",
     "@types/react-dom": "^16.8.1",
